examples/checker_tests/good/var_for_same_var.p4
void foo<A>(in A a) {
    A x = a;
}

void bar<A>(in A l, in A r) {
    foo(l);
}
